// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Queue Should synth and match SnapShot 1`] = `
"{
  "data": {
    "aws_caller_identity": {
      "CallerIdentity": {
        "provider": "aws"
      }
    },
    "aws_partition": {
      "Partitition": {
        "provider": "aws"
      }
    }
  },
  "provider": {
    "aws": [
      {
        "region": "us-east-1"
      }
    ]
  },
  "resource": {
    "aws_sqs_queue": {
      "HelloWorld_7964D1E8": {
        "name_prefix": "123e4567-e89b-12d3-TestStackHelloWorld",
        "tags": {
          "Name": "Test-HelloWorld",
          "grid:EnvironmentName": "Test",
          "grid:UUID": "123e4567-e89b-12d3"
        }
      }
    }
  },
  "terraform": {
    "backend": {
      "http": {
        "address": "http://localhost:3000"
      }
    },
    "required_providers": {
      "aws": {
        "source": "aws",
        "version": "5.88.0"
      }
    }
  }
}"
`;

exports[`Queue Should synth and match SnapShot with prefix 1`] = `
"{
  "data": {
    "aws_caller_identity": {
      "CallerIdentity": {
        "provider": "aws"
      }
    },
    "aws_partition": {
      "Partitition": {
        "provider": "aws"
      }
    }
  },
  "provider": {
    "aws": [
      {
        "region": "us-east-1"
      }
    ]
  },
  "resource": {
    "aws_sqs_queue": {
      "HelloWorld_7964D1E8": {
        "message_retention_seconds": 1209600,
        "name_prefix": "hello-worldTestStackHelloWorld",
        "tags": {
          "Name": "Test-HelloWorld",
          "grid:EnvironmentName": "Test",
          "grid:UUID": "123e4567-e89b-12d3"
        },
        "visibility_timeout_seconds": 900
      }
    }
  },
  "terraform": {
    "backend": {
      "http": {
        "address": "http://localhost:3000"
      }
    },
    "required_providers": {
      "aws": {
        "source": "aws",
        "version": "5.88.0"
      }
    }
  }
}"
`;

exports[`Queue Should synth with DLQ and match SnapShot 1`] = `
"{
  "data": {
    "aws_caller_identity": {
      "CallerIdentity": {
        "provider": "aws"
      }
    },
    "aws_partition": {
      "Partitition": {
        "provider": "aws"
      }
    }
  },
  "provider": {
    "aws": [
      {
        "region": "us-east-1"
      }
    ]
  },
  "resource": {
    "aws_sqs_queue": {
      "DLQ_581697C4": {
        "message_retention_seconds": 1209600,
        "name_prefix": "123e4567-e89b-12d3-TestStackDLQ",
        "tags": {
          "Name": "Test-DLQ",
          "grid:EnvironmentName": "Test",
          "grid:UUID": "123e4567-e89b-12d3"
        },
        "visibility_timeout_seconds": 900
      },
      "Queue_4A7E3555": {
        "message_retention_seconds": 1209600,
        "name_prefix": "123e4567-e89b-12d3-TestStackQueue",
        "redrive_policy": "{\\"deadLetterTargetArn\\":\\"\${aws_sqs_queue.DLQ_581697C4.arn}\\",\\"maxReceiveCount\\":5}",
        "tags": {
          "Name": "Test-Queue",
          "grid:EnvironmentName": "Test",
          "grid:UUID": "123e4567-e89b-12d3"
        },
        "visibility_timeout_seconds": 900
      }
    }
  },
  "terraform": {
    "backend": {
      "http": {
        "address": "http://localhost:3000"
      }
    },
    "required_providers": {
      "aws": {
        "source": "aws",
        "version": "5.88.0"
      }
    }
  }
}"
`;

exports[`Queue Should synth with contentBasedDeduplication and match SnapShot 1`] = `
"{
  "data": {
    "aws_caller_identity": {
      "CallerIdentity": {
        "provider": "aws"
      }
    },
    "aws_partition": {
      "Partitition": {
        "provider": "aws"
      }
    }
  },
  "provider": {
    "aws": [
      {
        "region": "us-east-1"
      }
    ]
  },
  "resource": {
    "aws_sqs_queue": {
      "Queue_4A7E3555": {
        "content_based_deduplication": true,
        "fifo_queue": true,
        "message_retention_seconds": 1209600,
        "name_prefix": "123e4567-e89b-12d3-TestStackQueue",
        "tags": {
          "Name": "Test-Queue",
          "grid:EnvironmentName": "Test",
          "grid:UUID": "123e4567-e89b-12d3"
        },
        "visibility_timeout_seconds": 900
      }
    }
  },
  "terraform": {
    "backend": {
      "http": {
        "address": "http://localhost:3000"
      }
    },
    "required_providers": {
      "aws": {
        "source": "aws",
        "version": "5.88.0"
      }
    }
  }
}"
`;

exports[`Queue Should synth with fifo suffix and match SnapShot 1`] = `
"{
  "data": {
    "aws_caller_identity": {
      "CallerIdentity": {
        "provider": "aws"
      }
    },
    "aws_partition": {
      "Partitition": {
        "provider": "aws"
      }
    }
  },
  "provider": {
    "aws": [
      {
        "region": "us-east-1"
      }
    ]
  },
  "resource": {
    "aws_sqs_queue": {
      "Queue_4A7E3555": {
        "fifo_queue": true,
        "message_retention_seconds": 1209600,
        "name_prefix": "queueTestStackQueue",
        "tags": {
          "Name": "Test-Queue",
          "grid:EnvironmentName": "Test",
          "grid:UUID": "123e4567-e89b-12d3"
        },
        "visibility_timeout_seconds": 900
      }
    }
  },
  "terraform": {
    "backend": {
      "http": {
        "address": "http://localhost:3000"
      }
    },
    "required_providers": {
      "aws": {
        "source": "aws",
        "version": "5.88.0"
      }
    }
  }
}"
`;
